Fixed transform collapse bug, add modal for no transform/filter cards, add multiple buttons to info area

--- a/src/app/builder/components/cards/CardStyle.less
+++ b/src/app/builder/components/cards/CardStyle.less
@@ -13,9 +13,12 @@
 .card-moving {
   padding: 3px !important;
   border-radius: 3px;
-  .transition;
   border-style: solid;
   border-width: 1px;
+}
+
+.card-component-wrapper-moving {
+  .transition;
 }
 
 .card {
